workspace/log/build_2024-12-02_12-41-28/template_drone_control/stderr.log
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:91:5: error: ‘Coords’ does not name a type
   91 |     Coords get_position(const std::string &ns)
      |     ^~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In constructor ‘MultiDroneControl::MultiDroneControl()’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:69:23: error: ‘get_position’ was not declared in this scope
   69 |         droneCoords = get_position(drone_namespaces_[1]);
      |                       ^~~~~~~~~~~~
make[2]: *** [CMakeFiles/swaarm_control.dir/build.make:63: CMakeFiles/swaarm_control.dir/src/swaarm_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/swaarm_control.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
